# employee_task_tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  user.JSON  users_list.JSON
config/: settings.py  urls.py
nginx/: nginx.conf
tasks/: admin.py  models.py  serializers.py  test.py  urls.py  validators.py  views.py
tasks/fixtures/: list_task_test.json  task_test.json  tasks.json
tasks/migrations/: 0001_initial.py  0002_tasks_is_parent_task.py  0003_tasks_performer.py
users/: admin.py  models.py  permissions.py  serializers.py  test.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_customuser_position.py
